--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,36 @@
-h1 {
+* {
     font-family: Helvetica;
-    font-size: 100px;
     font-weight: bold;
+}
+
+h1 {
+    font-size: 100px;
     text-align: center;
     color: khaki;
     background-image: url(./images/pattern.jpg);
 }
 
 h2 {
-    font-family: Helvetica;
     font-size: 32px;
-    font-weight: bold;
     color: white;
 }
 
-h3 {
-    font-weight: bold;
+p {
+    font-weight: normal;
 }
 
 span {
-    font-family: Helvetica;
-    font-weight: bold;
     color: blue;
 }
 
-h2.brushes {
+#brushes h2 {
     background-color: mediumspringgreen;
 }
 
-h2.frames {
+#frames h2 {
     background-color: lightcoral;
 }
 
-h2.paint {
+#paint h2 {
     background-color: skyblue;
 }
